...
    ])
    var systemState: FetchedResults<SystemState>
    
    private var transceiver = MultipeerTransceiver()
    
    // What tab are we currently in?
    @State private var tabSelection = "Nearby"
    
    // JSON encoding and decoding
    private let encoder = JSONEncoder()
    private let decoder = JSONDecoder()
    
    // Are we in a PM?
...
                        }
                        .tag("Requests")
                    
                    NearbyView(peerList: peers, chatModel: self.broadcastChatModel, hasUnread: self.hasUnreadBroadcasts, popupFunc: self.showPopup, requestFunc: self.sendRequest, broadcastToggleFunc: self.toggleShowingBroadcasts, transceiver: self.transceiver)
                        .tabItem {
                            Image(systemName: "dot.radiowaves.left.and.right")
                            Text("Near Me")
                        }
                        .tag("Nearby")
                    
                    FriendsView(friends: self.friendList[friendList.count - 1], chatFn: self.instantiateChat, popupFn: self.showPopup)
                        .tabItem {
                            Image(systemName: "heart.fill")
                            Text("Friends")
                        }
                        .environment(\.managedObjectContext, self.moc)
                        .tag("Friends")
                    
                    ProfileView(friends: self.friendList[self.friendList.count - 1])
                        .tabItem {
                            Image(systemName: "person.circle")
                            Text("Profile")
                        }
                        .tag("Profile")
                    
                    AboutView()
                        .tabItem {
                            Image(systemName: "gearshape.fill")
                            Text("Settings")
                        }
                        .tag("About")
                }
                .onAppear() {
                    // Start the transceiver.
                    transceiver.resume()
...
